# superstore

./: .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitattributes  .gitignore  AUTHORS  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: build.yml
rust/: Cargo.toml
src/: lib.rs
src/example/: mod.rs
superstore/: __init__.py  _version.py  crossfilter.py  superstore.py  utils.py
superstore/csp/: __init__.py  crossfilter.py
superstore/tests/: test_all.py  test_crossfilter.py  test_superstore.py  test_vendored.py
superstore/tests/csp/: test_crossfilter.py
