[package]
name = "superstore_py"
version = "0.2.6"
edition = "2021"
publish = false

[lib]
name = "superstore"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
superstore = { path = "./rust", version = "*" }
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
strum = "0.24.1"

[profile.release]
panic = 'abort'
lto = true
