[bumpversion]
current_version = 0.2.1
commit = True
tag = False

[bdist_wheel]
universal = 1

[metadata]
description_file = README.md
long_description_content_type = text/markdown

[flake8]
ignore = E203, W503
max-line-length = 1000
per-file-ignores = 
	superstore/__init__.py:F401

[bumpversion:file:superstore/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[check-manifest]
ignore =
